Set up 2 endpoints
